<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment">

    <ImageView
        android:id="@+id/lytHeader"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@drawable/app_background"
        android:tintMode="screen"
        android:contentDescription="@string/imgContentDescription"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:id="@+id/imgUserPicture"
            android:contentDescription="@string/imgContentDescription"
            android:src="@drawable/ic_baseline_account_circle_24px"
            android:layout_gravity="center"
            app:civ_border_width="4dp"
            app:civ_border_color="@color/colorDivider"
            />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblUserName"
        tools:text="Name Surname"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/lytScore">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_score"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/lblScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_zero"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <com.keplersegg.myself.components.BadgeView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            app:badgeId="1"
            app:iconSrc="@drawable/ic_startup"
            android:id="@+id/bvBadge1"
            android:layout_marginEnd="24dp"
            />

        <com.keplersegg.myself.components.BadgeView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            app:badgeId="2"
            app:iconSrc="@drawable/ic_flag"
            android:id="@+id/bvBadge2"
            android:layout_marginEnd="24dp"
            />

        <com.keplersegg.myself.components.BadgeView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            app:badgeId="3"
            app:iconSrc="@drawable/ic_trophy"
            android:id="@+id/bvBadge3"
            />

    </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:id="@+id/txtLogout"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:padding="10dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/txtLogin"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:padding="10dp"
            />
    </RelativeLayout>
</RelativeLayout>