<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.StatsTaskFragment"
    android:background="@drawable/app_background"
    android:backgroundTint="@color/colorPrimaryLight"
    android:backgroundTintMode="screen"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:contentPadding="16dp">

            <com.github.mikephil.charting.charts.LineChart
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/graphEntriesPerDay" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_trends"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            />

        <com.keplersegg.myself.components.LineStatView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="Last week"
            app:unit="items"
            android:id="@+id/lsvLastWeek"
            app:value="5"
            app:valueColor="#ff00ff"
            android:layout_marginBottom="4dp"
            />

        <com.keplersegg.myself.components.LineStatView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="Last month"
            app:unit="items"
            app:value="143"
            android:id="@+id/lsvLastMonth"
            app:valueColor="#ff00ff"
            android:background="#00000000"
            app:cardBackgroundColor="@null"
            android:backgroundTint="#00000000"
            android:layout_marginBottom="4dp"
            />

        <com.keplersegg.myself.components.LineStatView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="Highest streak"
            app:unit="days"
            app:value="143"
            android:id="@+id/lsvHighestStreak"
            app:valueColor="#ff00ff"
            android:background="#00000000"
            app:cardBackgroundColor="@null"
            android:backgroundTint="#00000000"
            android:layout_marginBottom="4dp"
            />

        <com.keplersegg.myself.components.LineStatView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="Current streak"
            app:unit="days"
            app:value="143"
            android:id="@+id/lsvCurrentStreak"
            app:valueColor="#ff00ff"
            android:background="#00000000"
            app:cardBackgroundColor="@null"
            android:backgroundTint="#00000000"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_highest_days"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/lytHighestDays">



        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_goals"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            android:gravity="center_horizontal">

            <com.keplersegg.myself.components.GoalStatView
                android:layout_width="72dp"
                android:layout_height="92dp"
                android:layout_marginEnd="24dp"
                android:id="@+id/gsvSuccessful"
                app:label="@string/lbl_successful"
                app:total="01"
                app:color="@android:color/holo_green_light">

            </com.keplersegg.myself.components.GoalStatView>

            <com.keplersegg.myself.components.GoalStatView
                android:layout_width="72dp"
                android:layout_height="92dp"
                android:layout_marginEnd="24dp"
                android:id="@+id/gsvFailed"
                app:label="@string/lbl_failed"
                app:total="220"
                app:color="@android:color/holo_orange_light">

            </com.keplersegg.myself.components.GoalStatView>

            <com.keplersegg.myself.components.GoalStatView
                android:layout_width="72dp"
                android:layout_height="92dp"
                android:id="@+id/gsvInProgress"
                app:label="@string/lbl_in_progress"
                app:total="0"
                app:color="@android:color/darker_gray">

            </com.keplersegg.myself.components.GoalStatView>

        </LinearLayout>
    </LinearLayout>
</ScrollView>