<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@drawable/app_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:alpha="0.5"
            android:background="@drawable/border_login_logo"
            android:gravity="center"
            android:tint="#FF00FF"
            android:tintMode="screen">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="roboto-black"
                android:foregroundTint="#00ffffff"
                android:foregroundTintMode="src_atop"
                android:padding="10dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="36sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btnLoginFacebook"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="#aa3C5898"
                android:text="@string/login_with_Facebook"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnLoginGoogle"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="#aaDC4538"
                android:text="@string/login_with_Google"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtContinueWithoutAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/continue_without_account" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#55cccccc"
        android:id="@+id/lytProgressBar"
        android:visibility="gone">

        <ProgressBar
            style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPrimary"
            />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>